--- a/DjangoF1/apps/pilot/templates/current_standing.html
+++ b/DjangoF1/apps/pilot/templates/current_standing.html
@@ -24,8 +24,8 @@
                                 <p class="ml-2 mb-0 fs-6 constructor-listing">{{item.constructor}}</p>
                                 <p class="ml-2 mb-0  driver-listing">{{item.driver}}</p> 
                                 <p class="ml-2 mb-0  driver-listing">{{item.points}} Points</p>
-                                {% if not item.driver.number == "\N" %}
-                                <p class="driver-number-listing" style=" font-family: 'Train One', cursive;">{{item.driver.number}}</p> 
+                                {% if not item.number == "\N" %}
+                                <p class="driver-number-listing" style=" font-family: 'Train One', cursive;">{{item.number}}</p> 
                                 {% endif %}
                                 
                             </div>
