--- a/DjangoF1/apps/pilot/templates/current_standing.html
+++ b/DjangoF1/apps/pilot/templates/current_standing.html
@@ -23,7 +23,7 @@
                             <div class="vertical-line" style="border-left:3px solid {% if item.constructor_season.0.color %}{{item.constructor_season.0.color}} {%else%} white {% endif %} ;">
                                 <p class="ml-2 mb-0 fs-6 constructor-listing">{{item.constructor}}</p>
                                 <p class="ml-2 mb-0  driver-listing">{{item.driver}}</p> 
-                                <p class="ml-2 mb-0  driver-listing">{{item.points}} Points</p>
+                                <p class="ml-2 mb-0  driver-listing"><i>{{item.points}} Points</i> </p>
                                 {% if not item.number == "\N" %}
                                 <p class="driver-number-listing" style=" font-family: 'Train One', cursive;">{{item.number}}</p> 
                                 {% endif %}
