--- a/DjangoF1/apps/pilot/templates/driver_standing.html
+++ b/DjangoF1/apps/pilot/templates/driver_standing.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
-<style>
-  
-</style>
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 {% endblock css %}
 {% block main %}
 <body style="background-color:#2e2e2e">
