--- a/DjangoF1/apps/core/templates/base.html
+++ b/DjangoF1/apps/core/templates/base.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 
-<title></title>
+<title>F1 Club |{% block title %}{% endblock title %}</title>
 {% block css %}{% endblock css %}
 </head>
 <body>
