--- a/DjangoF1/apps/pilot/templates/current_standing.html
+++ b/DjangoF1/apps/pilot/templates/current_standing.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block css %}
+{% block css %}<link rel="stylesheet" href="{% static 'css/main.css' %}">{% endblock css %}
 
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
-
-{% endblock css %}
+{% block title %}{%now 'Y'%} Drivers Standing{% endblock title %}
+    
 {% block main %}
 <body style="background-color:#2e2e2e">
     <div class="container-fluid">
