--- a/DjangoF1/apps/pilot/templates/new_current.html
+++ b/DjangoF1/apps/pilot/templates/new_current.html
@@ -1,25 +1,70 @@
+{% extends 'base.html' %}
 
+{% block css %}
+    <style>
+        .driver-number-listing{
+            display:inline-block;
+            position: absolute;
+            align-self: bottom;
+            justify-content: center;
+            z-index:0;
+            font-size:2em;
+            margin-top: 1em;
+            margin-left: -0.7em;
+            filter: opacity(0.5);
+        }
+        .driver-listing{
+            display:inline-block;
+            width: 6em;
+            height: auto;
+            /* margin-top: 2px; */
+            z-index: 1;
+        }
+    </style>
+{% endblock css %}
+    
 {% block main %}
-    <div class="container-fluid">
-        <div class="table table-responsive">
-            <table class="table ">
+    <div class="container-fluid" style="font-family: Poppins, sans-serif;">
+        <div class="table table-responsive mt-1 rounded">
+            <table class="table table-dark ">
                 <thead class="table-dark">
                     <tr>
-                        <th></th>
+                        
                     </tr>
                 
                     <tbody>
                         
                         {% for item in stats  %}
                         <tr>
-                            <td class="p-3" >
-                                <div class="p-3">
-                                    <div class="color-constructor-line" style="height: 1em; width: 1px; background-color: brown; display: inline-table; position: relative;margin-left: 3px">
-                                        .
-                                    </div>
-                                    
-                                    {{item.position}}
+                            <td align="center" style="" class="">
+                                <div class="d-flex">
+                                    <span class="fs-1 text-white fw-700  w-100 text-center align-items-center p-0 py-3 mt-3 "><b>{{item.position}}</b></span>
                                 </div>
+                                
+                            </td>
+                            <td class="p-3" >
+                                <div class="p-0" style="border-left:3px solid;height: 100%; display: inline-table; position: relative;margin-left: 3px; color: {%if item.constructor_season.0.color%}{{item.constructor_season.0.color}}{%else%}white{%endif%}">
+                                    
+                                    <div class="d-flex gx-3" >
+                                        <p class="m-2 fs-5 lh-1 text-secondary fw-700">{{item.constructor}}</p>
+                                    </div>
+                                    <p class="m-2 fs-3 lh-1 text-light fw-700">{{item.driver}}</p>
+                                    <p class="m-2 fs-6 lh-1 text-light fw-700 fs-italic">{{item.points}} points</p>
+                                    
+                                </div>
+                            </td>
+                            <td>
+                                <div class="d-flex">
+                                    {% if item.pilot_season %}
+                                    <img src="{{item.pilot_season.0.image.url}}" class="align-items-start p-0 py-3 mt-3 mr-3 driver-listing" style="" alt="">
+                                    {% else %}
+                                    <img src="{{item.driver.image.url}}" class="image-listing" alt=""> 
+                                    {% endif %}
+                                    {% if not item.number == "\N" %}
+                                        <p class="driver-number-listing " style=" font-family: 'Train One', cursive; ">{{item.number}}</p> 
+                                    {% endif %}
+                                </div>
+                               
                             </td>
                         </tr>
                         {% endfor %}
